# new-stow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  flake.nix  run-tests
examples/dotfiles/: stowfile
examples/exec/: Cargo.toml  makefile  stowfile
examples/multi-machine-dotfiles/: README.md
examples/multi-machine-dotfiles/machineA/: stowfile
examples/multi-machine-dotfiles/machineA/sway/: config
examples/multi-machine-dotfiles/machineB/: stowfile
examples/multi-machine-dotfiles/machineC/: stowfile
examples/nested/: stowfile
src/: filter.rs  link.rs  main.rs  settings.rs  stow.rs
tests/: integration-tests
